fix : api에러 자잘한것들